# sic-classification-utils

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG  CHANGELOG.md  CODEOWNERS  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
demos/embed/: sic_embedding_example.py
demos/llm/: llm_codability_example.py  llm_embedding_example.py  llm_final_prompt_example.py  llm_formulate_questions_example.py
demos/llm/data/: adult_mental_health_embed_short_list.json  final_sic_candidates.json  school_embed_short_list.json
demos/sayt/: sayt_artifact_example.py  sayt_example.py
demos/synthetic_responses/: synthetic_responses_example.py
docs/: embed.md  example_data.md  guide.md  index.md  llm.md  reference.md  utils.md
notebooks/: 2025-02-06-JD_prompt_demo.py  2026_01_sayt_experiment.py  2026_03_sayt_eval.py  sayt_example.py  sayt_experiment.py  unambiguous_prompt_runner.py
scripts/: README_evaluation_pipeline.md  evaluation_pipeline.md  metadata_PS.json  metadata_stage2.json  random_100_sample.csv  run_final_pipeline.sh  run_full_pipeline.sh  shared_evaluation_pipeline_components.py  stage_1.py  stage_1_add_semantic_search.py  stage_2_add_unambiguously_codable_status.py  stage_2_assign_sic_code_one_prompt.py  stage_2_get_rag_sic_code.py  stage_2_one_prompt_assign_sic_code.py  stage_3_add_open_questions.py  stage_4_add_snthetic_responses.py  stage_4_add_synthetic_responses.py  stage_4_one_prompt_add_synthetic_responses.py  stage_5_assign_final_sic_code.py  stage_5_modify_industry_description.py  stage_5_one_prompt_assign_final_sic_code.py  stage_5_rephrase_industry_description.py  stage_k_template.py
scripts/OnePromptOutputs/: STG1.csv  STG1.parquet  STG1_metadata.json  STG2_oneprompt.csv  STG2_oneprompt.parquet  STG2_oneprompt_metadata.json  STG4_oneprompt.csv  STG5_oneprompt.csv  STG5_oneprompt.parquet
scripts/OnePromptOutputs/intermediate_outputs/: STG2.parquet  STG2_hhhh.parquet  STG2_hhhh_metadata.json  STG2_metadata.json  STG2_oneprompt.parquet  STG4.parquet  STG4_checkpoint_info.json  STG4_metadata.json  STG4_oneprompt.parquet  STG4_oneprompt_metadata.json  STG5.parquet  STG5_metadata.json  STG5_oneprompt.parquet  STG5_oneprompt_metadata.json  STGK.parquet  STGK_metadata.json
scripts/SA334TEST/: STG1.csv  STG1.parquet  STG1_metadata.json  STG2.csv  STG2.parquet  STG2_metadata.json
scripts/TwoPromptOutputs/: STG1.csv  STG1.parquet  STG1_metadata.json  STG2.csv  STG2.parquet  STG2_metadata.json  STG3.csv  STG3.parquet  STG3_metadata.json  STG4.csv  STG4.parquet  STG4_metadata.json  STG5.csv  STG5.parquet  STG5_metadata.json
scripts/data/: DSC_Rep_sub-sample.csv
src/industrial_classification_utils/embed/: __init__.py  embedding.py  sic_embedding_example.py  sic_specific_embed.py
src/industrial_classification_utils/llm/: __init__.py  llm.py  llm_codability_example.py  llm_embedding_example.py  llm_final_prompt_example.py  llm_formulate_questions.py  llm_forumlate_questions.py  prompt.py
src/industrial_classification_utils/models/: config_model.py  response_model.py
src/industrial_classification_utils/sayt/: __init__.py  builder.py  core.py  indexes.py  retriever_specs.py  sayt.py  sayt_builder.py  sayt_common.py  sayt_config.py  sayt_core.py  sayt_indexes.py  sayt_retriever_specs.py  sayt_retrievers.py  sayt_storage.py  storage.py  suggester.py
src/industrial_classification_utils/synthetic_responses/: README.md  __init__.py  prompts.py  response_models.py  synthetic_response_utils.py  synthetic_responses_example.py
tests/: test.ipynb  test_embedding.py  test_gcs_file_access.py  test_llm.py  test_sayt.py  test_shared_evaluation_pipeline_components.py  test_sic_data_access.py
tests/sayt/: test_sayt.py  test_sayt_builder.py  test_sayt_config.py  test_sayt_retrievers.py  test_sayt_storage.py
(+7 files in other folders)
